fix overflow issue on ios

--- a/_sass/components/_cta-container.scss
+++ b/_sass/components/_cta-container.scss
@@ -2,6 +2,7 @@
   padding: 65px 20px 30px;
   background-color: lighten($ink, 50);
   position: relative;
+  overflow: hidden;
 
   &::before {
     @include shadow-pseudo;
